--- a/slam/CMakeLists.txt
+++ b/slam/CMakeLists.txt
@@ -14,7 +14,7 @@ find_package(catkin REQUIRED COMPONENTS
 
 catkin_package(
 #  INCLUDE_DIRS include
-#  LIBRARIES OAN
+#  LIBRARIES SLAM
 #  CATKIN_DEPENDS geometry_msgs mavros mavros_msgs roscpp rospy std_msgs
 #  DEPENDS system_lib
 )
@@ -31,7 +31,9 @@ include_directories(
 )
 
 add_executable(${PROJECT_NAME}_node
-                src/slam_node.cpp)
+                src/slam_node.cpp
+		src/slam_lib_base.cpp
+		src/slam_lib.cpp)
 
 target_link_libraries(${PROJECT_NAME}_node
 ${catkin_LIBRARIES}
